# cmocka_test

./: CMakeLists.txt  cmd.txt  main.c  readme.txt
cmake/: CodeCoverage.cmake  deb_packaging.cmake
lib/: manC.c  manC.h  man_c.c  man_c.h
test/: test_man_collection.c
tests/: #test_demo.c#  CMakeLists.txt  test_demo.c
